--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -144,6 +144,7 @@
                     </div>
                     <div class="section-title text-center mt-30 pb-40">
                         <h4 class="title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">Pro opravdové milovníky piva</h4>
+                        <p class="text wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">&bdquo;Uvař&rdquo; si pivo online a my pro tebe zařídíme všechno ostatní. Vypít ho už musíš sám!</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
